--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+  <h1>New game</h1>
     <%= yield %>
+  <p>What is the longest word you cand find?</p>
+  <input type="text">
+  <input id="submit" name="word" type="submit" value="Play">
   </body>
 </html>
